fix: fix spacing

--- a/src/pages/ProductDetails/ProductDetails.scss
+++ b/src/pages/ProductDetails/ProductDetails.scss
@@ -48,8 +48,7 @@
 
         .product-price {
           font-size: $font-size-xxl;
-          margin-top: $spacing-md;
-          margin-bottom: $spacing-md;
+          margin: $spacing-lg 0;
           font-weight: normal;
         }
       }
